--- a/premade-configs/casual.yaml
+++ b/premade-configs/casual.yaml
@@ -17,6 +17,18 @@ Fonts:
     wght: 300
     slnt: -10
     CRSV: 1
+  Lighter:
+    MONO: 1
+    CASL: 1
+    wght: 350
+    slnt: 0
+    CRSV: 0
+  Lighter Italic:
+    MONO: 1
+    CASL: 1
+    wght: 350
+    slnt: -10
+    CRSV: 1
   Regular:
     MONO: 1
     CASL: 1
