--- a/custom-configs/casual.yaml
+++ b/custom-configs/casual.yaml
@@ -1,13 +1,13 @@
-# Configuration for Rec Mono Duotone
+# Configuration for Rec Mono Casual
 # Here as an example, or to tweak & use if you wish to
 # See README for details.
 
-Family Name: Duotone 
+Family Name: Casual
 
 Fonts:
   Light:
     MONO: 1
-    CASL: 0
+    CASL: 1
     wght: 300
     slnt: 0
     CRSV: 0
@@ -19,7 +19,7 @@ Fonts:
     CRSV: 1
   Lighter:
     MONO: 1
-    CASL: 0
+    CASL: 1
     wght: 350
     slnt: 0
     CRSV: 0
@@ -31,7 +31,7 @@ Fonts:
     CRSV: 1
   Regular:
     MONO: 1
-    CASL: 0
+    CASL: 1
     wght: 400
     slnt: 0
     CRSV: 0
@@ -43,7 +43,7 @@ Fonts:
     CRSV: 1
   Medium:
     MONO: 1
-    CASL: 0
+    CASL: 1
     wght: 500
     slnt: 0
     CRSV: 0
@@ -68,21 +68,28 @@ Fonts:
   Bold:
     MONO: 1
     CASL: 1
-    wght: 750
+    wght: 700
     slnt: 0
     CRSV: 0
   Bold Italic:
     MONO: 1
     CASL: 1
-    wght: 750
+    wght: 700
     slnt: -10
     CRSV: 1
 
 Code Ligatures: True
 
 Features:
+- ss01 # Single-story a
+- ss02 # Single-story g
 - ss03 # Simplified f
+- ss04 # Simplified i
 - ss05 # Simplified l
+- ss06 # Simplified r
+- ss07 # Simplified italic diagonals
 - ss08 # Serifless L and Z
 - ss09 # Simplified 6 and 9
+- ss10 # Dotted zero
+- ss11 # Simplified 1
 - ss12 # Simplified @
