--- a/custom-configs/duotone.yaml
+++ b/custom-configs/duotone.yaml
@@ -2,7 +2,7 @@
 # Here as an example, or to tweak & use if you wish to
 # See README for details.
 
-Family Name: Duotone 
+Family Name: Duotone
 
 Fonts:
   Light:
@@ -81,8 +81,15 @@ Fonts:
 Code Ligatures: True
 
 Features:
+- ss01 # Single-story a
+- ss02 # Single-story g
 - ss03 # Simplified f
+- ss04 # Simplified i
 - ss05 # Simplified l
+- ss06 # Simplified r
+- ss07 # Simplified italic diagonals
 - ss08 # Serifless L and Z
 - ss09 # Simplified 6 and 9
+- ss10 # Dotted zero
+- ss11 # Simplified 1
 - ss12 # Simplified @
