--- a/default-configs/casual.yaml
+++ b/default-configs/casual.yaml
@@ -57,4 +57,9 @@ Fonts:
 Code Ligatures: True
 
 Features:
+- ss03 # Simplified f
+- ss05 # Simplified l
+- ss08 # Serifless L and Z
+- ss09 # Simplified 6 and 9
+- ss11 # Simplified 1
 - ss12 # Simplified @
